  some commonly used build configurations.
* Use only the same floating point type for all counts and values in
  SgUctSearch. The floating point type cane be set with the configure
  parameter --enable-uct-value-type
* Added generic argument parsing function GtpCommand::Arg<T> and declared
  old function (GtpCommand::IntArg() etc.) as deprecated

Version 0.4.1 - 2009 Dec 23
===========================
[Note that the numbering for this version is misleading. This is not a
bugfix release from the stable branch after version 0.4 (VERSION_0_4_FIXES),
but a new release with new features from the main branch.]

* Replaced linked list SgList and related functions by SgVector - a wrapper
  around std:vector with the same interface as SgList. Changed implementations
  that added or removed from front of list for efficiency.
* Added hooks for supporting MPI distributed memory implementations
* Add small opening book for 5x5
* Improved 9x9 opening book
* Added link to optional big 19x19 opening books at Ben Lambrechts' site
* Fixed several bugs in static safety solver
* Updated to compile with gcc 4.4.0
* Implemented SgBalancer to achieve roughly equal number of Black and White 
  moves of a specific type in playouts
* Implemented randomized use of RAVE for SelectChild
* Support for proven nodes in SgUctSearch
* Support for kgs-time_settings and different KGS overtime modes
* Refactored SgSearch, reduce size of huge functions. 
* In SgSearch::SearchEngine, use a stack instead of a vector for efficiency
* New max_memory option to uct_param_search makes Fuego easier to configure
* Implement forced opening moves in GoUctPlayer
* Set bias term constant to 0 by default on all boardsizes

Version 0.4 - 2009 May 22
=========================

* Remove SgStreamFmtRestorer; use Boost IO State Savers instead 
* Remove SgUctPriorKnowledge; Derived thread state class will supply knowledge
  values through the GenerateAllMoves() function.